# sglang_benchmarks

./: .gitignore  benchmarks.py  generate_long_context_workload.py  generate_workload.py  plot_results.py  pyproject.toml  requirements.txt  run_benchmarks.sh  run_server.sh  setup.sh
results/: baseline_conc_128_results.json  baseline_conc_128_stats.json  baseline_conc_16_results.json  baseline_conc_16_stats.json  baseline_conc_32_results.json  baseline_conc_32_stats.json  baseline_conc_4_results.json  baseline_conc_4_stats.json  baseline_conc_64_results.json  baseline_conc_64_stats.json  workload_ctx_1000_results.json  workload_ctx_1000_stats.json  workload_ctx_117964_results.json  workload_ctx_117964_stats.json  workload_ctx_52984_results.json  workload_ctx_52984_stats.json
results_offload/: offload_conc_128_results.json  offload_conc_128_stats.json  offload_conc_16_results.json  offload_conc_16_stats.json  offload_conc_32_results.json  offload_conc_32_stats.json  offload_conc_64_results.json  offload_conc_64_stats.json  offload_conc_8_results.json  offload_conc_8_stats.json
workload/: workload_conc_1.json  workload_conc_128.json  workload_conc_16.json  workload_conc_32.json  workload_conc_4.json  workload_conc_64.json  workload_conc_8.json  workload_ctx_1000_turns_2-7.json  workload_ctx_104968_turns_2-7.json  workload_ctx_117964_turns_2-7.json  workload_ctx_13996_turns_2-7.json  workload_ctx_26992_turns_2-7.json  workload_ctx_39988_turns_2-7.json  workload_ctx_52984_turns_2-7.json  workload_ctx_65980_turns_2-7.json  workload_ctx_78976_turns_2-7.json  (+1 more)
(+10 files in other folders)
